src/test/deca/codegen/valid/operation-binaire-equals.deca
// Description:
//    operation binaire equals
//
// Resultats:
//
//
// Historique:
//    cree le 06/01/2023

{
    1 == 1.0;
}