src/test/deca/codegen/invalid/opOverflow.deca
// Description:
//    Division par 0.0
//
// Resultats:
//    Execution error
//    Error : floating point number operation overflow
//
// Historique:
//    cree le 15/01/2023

{
        1/0.0;
}